autotests/syntax-tests/tests/negative/negative66.sref
Name { Name $LABEL Name Name , : = : = ; = ; } ; 